<resources>
    <string name="app_name">PlivoSimpleQuickStart</string>
    <string name="call">Call</string>
    <string name="end_call">End Call</string>
    <string name="make_call">Make Call</string>
    <string name="enter_outgoing">Enter Outgoing</string>
    <string name="logout">Logout</string>
    <string name="logout_success">Logout Success</string>
    <string name="login_failed">Login with valid username and password</string>
    <string name="logging_in">Logging in..</string>
    <string name="status">Status</string>
    <string name="calling">Calling</string>
    <string name="answer">Answer</string>
    <string name="reject">Reject</string>
    <string name="dtmf_received">DTMF rx %s</string>
    <string name="title_activity_contacts">Contacts</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
